# ai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
src/ai/: log.py
src/ai/car/: main.py  models.py  parse_car_details.py  utils.py
tests/car/: main_test.py
