[build-system]
requires = ["setuptools"]  # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior can happen.

[project]
name = "ai"
version = "0.0.1-alpha" 
description = "Denis' AI Stuff"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "httpx",
    "instructor",
    "openai",
    "pydantic",
    "pyppeteer",
    "pyarrow",
    "streamlit",
    "structlog",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ipython", "ipdb", "pandas", "jupyterlab"]
test = ["coverage"]

[project.scripts]
# sample = "sample:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"sample" = ["*.dat"]}
